force-app/main/default/objects/Experience_Detail__c/Experience_Detail__c.object-meta.xml
<CustomObject>
    <label>Experience Detail</label>
    <nameField>
        <displayFormat>Exp-{0000}</displayFormat>
        <label>Experience Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>