force-app/main/default/objects/Experience_Detail__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>YEAR(End_Date__c)- YEAR(Start_Date__c)+ (End_Date__c - DATE(YEAR(End_Date__c),MONTH(Start_Date__c),DAY(Start_Date__c)))/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period(Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>