force-app/main/default/objects/Experience_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>